--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1 class="mb-4">{{ _('Admin Login') }}</h1>
 
-<form method="post" action="{{ url_for('login', next=next_url) }}" class="col-md-6 col-lg-4">
+<form method="post" action="{{ url_for('login', next=next_url) }}">
   <div class="mb-3">
     <label class="form-label">{{ _('Username') }}</label>
     <input class="form-control" name="username" autocomplete="username" required>
